--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>manual-animaciones</title>
+    <meta name="description" content="Manual interactivo de animaciones CSS para UXnicorp - Aprende, experimenta y crea magia" />
+    <meta name="theme-color" content="#FFB5E8" />
+    <title>Manual de Animaciones CSS | UXnicorp</title>
   </head>
   <body>
     <div id="root"></div>
